sos app with api

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   fluttertoast: ^8.2.1
   get: ^4.6.5
   dio: ^5.1.1
+  pinput: ^2.2.31
+  get_storage: ^2.1.1
+  flutter_local_notifications: ^8.2.0
 
 dev_dependencies:
   flutter_test:
