--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.warning_app">
+    <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
    <application
         android:label="warning_app"
         android:name="${applicationName}"
