--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   pinput: ^2.2.31
   get_storage: ^2.1.1
   flutter_local_notifications: ^8.2.0
+  flutter_pw_validator: ^1.5.0
+  password_strength_checker: ^1.2.2
+  local_auth: ^2.1.6
 
 dev_dependencies:
   flutter_test:
