--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_pw_validator: ^1.5.0
   password_strength_checker: ^1.2.2
   local_auth: ^2.1.6
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
