--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   password_strength_checker: ^1.2.2
   local_auth: ^2.1.6
   flutter_secure_storage: ^8.0.0
+  image_picker: ^0.8.7+5
 
 dev_dependencies:
   flutter_test:
